--- a/javscript.html
+++ b/javscript.html
@@ -36,6 +36,8 @@
 
               ==> promises
 
+              ==> prototypes
+
 -->
 
 <!-- statically typed ==> we need to specify data type of a variable eg : char name=" some"  eg : c, java -->
@@ -228,6 +230,10 @@ by using typeof() , we cab able to identify the type of the values
 <!-- how you prevent global variable issue ? -->
 
 <!--  array methods ? 
+
+   ==> in javaScript array is 0 based index
+
+   ==> if you want to access array elemnets  ==> arr[index]
       
       ==> mutator methods 
 
@@ -239,25 +245,27 @@ by using typeof() , we cab able to identify the type of the values
 
                         unshift   ==> arrName.unshift(elemnet want to add starting of the array),
 
-                        slice     ==> , 
+                        slice     ==> arrname.slice(starting index, end index), 
 
-                        splice,
+                        splice    ==> arrname.splice(start index, count of delete , items to add) ,
 
-                        fill,
+                        fill      ==> arr.fill(fill with  , start index, end index),  
 
-                        delete,
+                        delete    ==> delete arrname[index],
 
-                        split,
+                        split     ==> arr.split(""),
 
-                        reverse,
+                        reverse   ==> arr.revrse(),
 
-                        join,
+                        join      ==> arr.join(""),
 
-                        replace,
+                        replace   ==> arr.replace( replaced val, new val,),
 
-                        concat,
+                        concat    ==> let arr =[1,2,3]; let arr1=[4,5,6]; let arr2 = arr.concat(arr1);
 
-                        sort
+                        sort      ==> arr.sort() 
+
+                        trim      ==> it will remove spaces from starting and ending of the string ==> str.trim()
 
       ==> iterator methods
 
