--- a/javscript.html
+++ b/javscript.html
@@ -324,4 +324,4 @@ by using typeof() , we cab able to identify the type of the values
 
       -->
 
-      <!-- recursive function -->    need to cover
+      <!-- recursive function -->    //need to cover
