--- a/javscript.html
+++ b/javscript.html
@@ -324,4 +324,25 @@ by using typeof() , we cab able to identify the type of the values
 
       -->
 
+
+    <!-- loops in javascript 
+     
+    Loop ==> it will execute block of code repeatedly
+
+    type of loops in javascript 
+
+     ==> for , while , do while, for of , for in
+    
+    -->
+
+      <!-- grabage collector --> // need to cover
+
       <!-- recursive function -->    //need to cover
+
+      <!--  generators --> // need to cover
+
+      <!-- time complexity -->  // need to cover
+
+      <!-- IIFE  -->  // need to cover
+
+      <!-- OOPS  ==> class, object, encapsulation, abstraction, inheritence, message passing  -->
